Update project details and enhance styling for technology stack display

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
-        <h3 class="type">Web Page</h3>
+        <a href="#" target="_blank" class="title">Personal Website</a>
+        <h3 class="type">Website</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
@@ -91,50 +91,49 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
-        <h3 class="type">Web Page</h3>
+        <a href="#" target="_blank" class="title">ُExpenses Tracker</a>
+        <h3 class="type">Desktop</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
-            <span class="language">HTML</span>
-            <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Python</span>
+            <span class="language">CTkinter</span>
+            <span class="language">Tkinter</span>
+            <span class="language">Api Requests</span>
           </div>
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
-        <h3 class="type">Web Page</h3>
+        <a href="#" target="_blank" class="title">Currency Converter</a>
+        <h3 class="type">Desktop App</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
-            <span class="language">HTML</span>
-            <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Python</span>
+            <span class="language">Tkinter</span>
+            <span class="language">Api Requests</span>
           </div>
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
+        <a href="#" target="_blank" class="title">Tic-Tac-Toe XO-Game </a>
         <h3 class="type">Web Page</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
-            <span class="language">HTML</span>
-            <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Python</span>
+            <span class="language">Tkinter</span>
+            <span class="language">Built In Ai</span>
           </div>
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
-        <h3 class="type">Web Page</h3>
+        <a href="#" target="_blank" class="title">ToDo-list App</a>
+        <h3 class="type">Desktop App</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
-            <span class="language">HTML</span>
-            <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Python</span>
           </div>
         </div>
       </article>
