Update language display from Sass to Scss in project cards

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="languages">
             <span class="language">HTML</span>
             <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Scss</span>
           </div>
         </div>
       </article>
@@ -86,7 +86,7 @@
           <div class="languages">
             <span class="language">HTML</span>
             <span class="language">CSS</span>
-            <span class="language">Sass</span>
+            <span class="language">Scss</span>
           </div>
         </div>
       </article>
