Update social links in index.html to point to LinkedIn and GitHub profiles

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 
         <div class="bottom">
           <div class="icons">
-            <a href="#" class="social_link"
+            <a
+              href="https://www.linkedin.com/in/mostafagamalbisher/"
+              class="social_link"
               ><img
                 src="./assets/icon/linkedin.png"
                 alt="linkedin icon"
                 class="icon" /></a
-            ><a href="#" class="social_link"
+            ><a href="https://github.com/MostafaGamalBisher" class="social_link"
               ><img
                 src="./assets/icon/github-142-svgrepo-com.svg"
                 alt="github icon"
