Update project links in index.html to point to live GitHub pages and repositories

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">Personal Website</a>
+        <a
+          href="https://mostafagamalbisher.github.io/Personal-Portfolio-Dashboard/"
+          target="_blank"
+          class="title"
+          >Personal Website</a
+        >
         <h3 class="type">Website</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
@@ -81,7 +86,12 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">luxury profile card</a>
+        <a
+          href="https://mostafagamalbisher.github.io/luxury-profile-card/"
+          target="_blank"
+          class="title"
+          >luxury profile card</a
+        >
         <h3 class="type">Web Page</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
@@ -93,7 +103,12 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">ُExpenses Tracker</a>
+        <a
+          href="https://github.com/MostafaGamalBisher/Expenses-Tracker"
+          target="_blank"
+          class="title"
+          >ُExpenses Tracker</a
+        >
         <h3 class="type">Desktop</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
@@ -106,7 +121,12 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">Currency Converter</a>
+        <a
+          href="https://github.com/MostafaGamalBisher/Currency-Converter"
+          target="_blank"
+          class="title"
+          >Currency Converter</a
+        >
         <h3 class="type">Desktop App</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
@@ -118,7 +138,12 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">Tic-Tac-Toe XO-Game </a>
+        <a
+          href="https://github.com/MostafaGamalBisher/Tic-Tac-Toe-X-O-Game"
+          target="_blank"
+          class="title"
+          >Tic-Tac-Toe XO-Game
+        </a>
         <h3 class="type">Web Page</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
@@ -130,12 +155,18 @@
         </div>
       </article>
       <article class="card">
-        <a href="#" target="_blank" class="title">ToDo-list App</a>
+        <a
+          href="https://github.com/MostafaGamalBisher/weatherapp"
+          target="_blank"
+          class="title"
+          >ًWeather App</a
+        >
         <h3 class="type">Desktop App</h3>
         <div class="stack">
           <h3 class="stack_title">TECH STACK:</h3>
           <div class="languages">
             <span class="language">Python</span>
+            <span class="language">Tkinter</span>
           </div>
         </div>
       </article>
