Update link text for personal website to "Personal Portfolio Dashboard"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           href="https://mostafagamalbisher.github.io/Personal-Portfolio-Dashboard/"
           target="_blank"
           class="title"
-          >Personal Website</a
+          >Personal Portfolio Dashboard</a
         >
         <h3 class="type">Website</h3>
         <div class="stack">
