Fix typo in Expenses Tracker link text

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           href="https://github.com/MostafaGamalBisher/Expenses-Tracker"
           target="_blank"
           class="title"
-          >ُExpenses Tracker</a
+          >Expenses Tracker</a
         >
         <h3 class="type">Desktop</h3>
         <div class="stack">
