Add Qurantab Landing Page project and update tech stack labels in index.html

--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
       </article>
       <article class="card">
         <a
+          href="https://mostafagamalbisher.github.io/Qurantab-Landing-Page/"
+          target="_blank"
+          class="title"
+          >Qurantab Landing Page</a
+        >
+        <h3 class="type">Website</h3>
+        <div class="stack">
+          <h3 class="stack_title">TECH STACK:</h3>
+          <div class="languages">
+            <span class="language">HTML</span>
+            <span class="language">CSS</span>
+            <span class="language">SCSS</span>
+          </div>
+        </div>
+      </article>
+      <article class="card">
+        <a
           href="https://mostafagamalbisher.github.io/Personal-Portfolio-Dashboard/"
           target="_blank"
           class="title"
@@ -98,7 +115,7 @@
           <div class="languages">
             <span class="language">HTML</span>
             <span class="language">CSS</span>
-            <span class="language">Scss</span>
+            <span class="language">SCSS</span>
           </div>
         </div>
       </article>
@@ -116,7 +133,7 @@
             <span class="language">Python</span>
             <span class="language">CTkinter</span>
             <span class="language">Tkinter</span>
-            <span class="language">Api Requests</span>
+            <span class="language">API</span>
           </div>
         </div>
       </article>
@@ -133,7 +150,7 @@
           <div class="languages">
             <span class="language">Python</span>
             <span class="language">Tkinter</span>
-            <span class="language">Api Requests</span>
+            <span class="language">API</span>
           </div>
         </div>
       </article>
@@ -159,7 +176,7 @@
           href="https://github.com/MostafaGamalBisher/weatherapp"
           target="_blank"
           class="title"
-          >ًWeather App</a
+          >Weather App</a
         >
         <h3 class="type">Desktop App</h3>
         <div class="stack">
@@ -167,6 +184,7 @@
           <div class="languages">
             <span class="language">Python</span>
             <span class="language">Tkinter</span>
+            <span class="language">API</span>
           </div>
         </div>
       </article>
